added router, 2 tasks endpoints with routers

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.15",
     "module-alias": "^2.2.2",
     "pm2": "^5.2.0",
+    "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
