added create, update, task endpoints

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "prisma": "^4.1.1"
   },
   "keywords": [],
-  "author": "",
+  "author": "anupmahato033@gmail.com,pawan.edu930@gmail.com",
   "license": "ISC"
 }
