--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://86zv142jn2nj:pscale_pw_jBtdI_yW8cTZDLz9jSCNKjYzn4eUk_paLuHHdaU8uFc@nddcu9hh1s6j.ap-south-2.psdb.cloud/jira?sslaccept=strict'
+DATABASE_URL="mysql://fcph50vzmfhp:pscale_pw_4gS6-5faTlMqORvusmFyYz-2qn5Za_f47VklAevM5Mc@nddcu9hh1s6j.ap-south-2.psdb.cloud/jira?sslaccept=strict"
+APP_NAME = 'NĪTI'
