added new password

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://fcph50vzmfhp:pscale_pw_4gS6-5faTlMqORvusmFyYz-2qn5Za_f47VklAevM5Mc@nddcu9hh1s6j.ap-south-2.psdb.cloud/jira?sslaccept=strict"
+DATABASE_URL="mysql://ulyn7qvd8lvq:pscale_pw_rWfvcriG2CdhReT0NtJ_ySnLnf6pu_MvojFyC9EmcFA@nddcu9hh1s6j.ap-south-2.psdb.cloud/jira?sslaccept=strict"
 APP_NAME = 'NĪTI'
