--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://cfz7p13g6npx:pscale_pw_pfpWpyv4rGZbRxTEKJ5vHYYdgQCfraNcbW1kFCIGfis@nddcu9hh1s6j.ap-south-2.psdb.cloud/jira?sslaccept=strict"
+DATABASE_URL="mysql://3g72m3ap5zuk:pscale_pw_JnFudaLfpjv4Xp6tmX4dXxHaOv_AxHD8rfl51vE4GD0@nddcu9hh1s6j.ap-south-2.psdb.cloud/jira?sslaccept=strict"
 APP_NAME = 'NĪTI'
