--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "pm2": "^5.2.0",
+    "superjson": "^1.9.1",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
     "uuid": "^8.3.2",
