--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js",
     "postinstall": "prisma db pull && prisma generate",
     "fetch": "prisma db pull && prisma generate",
+    "dbsync":"prisma db push",
     "swagger-autogen": "node swagger.js"
   },
   "dependencies": {
