--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "start": "node index.js",
     "postinstall": "prisma db pull && prisma generate",
     "fetch": "prisma db pull && prisma generate",
-    "dbsync":"prisma db push",
+    "dbsync": "prisma db push",
     "swagger-autogen": "node swagger.js"
   },
   "dependencies": {
     "@prisma/client": "^4.1.1",
+    "axios": "^0.27.2",
     "binary-uuid": "^2.0.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -24,7 +25,9 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
+    "multer": "^1.4.5-lts.1",
     "pm2": "^5.2.0",
+    "socket.io": "^4.5.1",
     "superjson": "^1.9.1",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
